# dask-kubernetes

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  ci.sh  go.mod  go.sum  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  test.py  versioneer.py
.circleci/: config.yml
.github/: release-drafter.yml
.github/workflows/: ci.yaml  helmcluster-ci.yaml  helmcluster.yaml  kubecluster-ci.yaml  kubecluster.yaml  lint.yaml  operator-ci.yaml  operator.yaml  release-drafter.yml  release-publish.yml  release.yml  update-go-package-version.yml
ci/: Dockerfile  consolidate-manifests.sh  environment-3.6.yml  environment-3.7.yml  install-circle.sh  install-deps.sh  pre-commit-crd.py  test-runner-setup.yaml
dask_kubernetes/: __init__.py  _version.py  adaptive.py  auth.py  config.py  conftest.py  constants.py  core.py  exceptions.py  helm.py  kubernetes.yaml  logs.py  objects.py  utils.py
dask_kubernetes/aiopykube/: objects.py  query.py
dask_kubernetes/aiopykube/tests/: test_pykube_objects.py  test_query.py
dask_kubernetes/classic/: __init__.py  kubecluster.py
dask_kubernetes/classic/tests/: fake_gcp_auth.py  test_async.py  test_sync.py
dask_kubernetes/cli/: cli.py
dask_kubernetes/common/: auth.py  networking.py  objects.py  utils.py
dask_kubernetes/experimental/: __init__.py  discovery.py  kubecluster.py
dask_kubernetes/helm/: __init__.py  helm.py  helmcluster.py
dask_kubernetes/operator/: __init__.py  _objects.py  core.py  daskcluster.py  daskjob.py  networking.py  objects.py  operator.py  validation.py
dask_kubernetes/tests/: config-demo.yaml  conftest.py  fake_gcp_auth.py  test_async.py  test_core.py  test_helm.py  test_kind.py  test_objects.py  test_sync.py  test_utils.py
daskernetes/: __init__.py  config.py  core.py  objects.py
daskernetes/tests/: conftest.py  test_core.py  test_objects.py
doc/: Makefile  make.bat  requirements-docs.txt
doc/source/: aiopykube.rst  api.rst  conf.py  contributing.rst  helmcluster.rst  history.rst  index.rst  installing.rst  kubecluster.rst  kubecluster2.rst  kubecluster_migrating.rst  operator.rst  operator_extending.rst  operator_installation.rst  operator_kubecluster.rst  operator_resources.rst  releasing.rst  testing.rst
docker/: Dockerfile
docs/: requirements-docs.txt
docs/source/: conf.py  history.rst  index.rst  installing.rst  kubecluster_migrating.rst  operator_kubecluster.rst  operator_resources.rst  operator_troubleshooting.rst  testing.rst
resources/: README.rst
resources/helm/: chartpress.yaml
resources/manifests/: daskcluster.yaml
(+167 files in other folders)
