[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "dask-kubernetes"
dynamic = ["version"]
description = "Native Kubernetes integration for Dask"
readme = "README.rst"
license = { file = "LICENSE" }
requires-python = ">=3.10"
maintainers = [{ name = "Jacob Tomlinson" }]
keywords = ["dask", "distributed", "kubernetes"]
dependencies = [
    "dask>=2022.08.1",
    "distributed>=2022.08.1",
    "kopf>=1.35.3",
    "kr8s==0.17.*",
    "kubernetes-asyncio>=12.0.1",
    "kubernetes>=12.0.1",
    "pykube-ng>=22.9.0",
    "rich>=12.5.1",
]

[project.urls]
Homepage = "https://github.com/dask/dask-kubernetes"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "dask_kubernetes/_version.py"

[tool.hatch.build.targets.sdist]
include = ["/dask_kubernetes"]

[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "F", "W", "I"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "__init__.py",
    "versioneer.py",
    "distributed/_concurrent_futures_thread.py",
]

per-file-ignores = {}

ignore = [
    "E4",   # Import formatting
    "E721", # Comparing types instead of isinstance
    "E731", # Assigning lambda expression
    "E741", # Ambiguous variable names
    "F811", # redefinition of unused 'loop' from line 10
    "F841", # local variable is assigned to but never used
]

line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py310"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --keep-cluster --durations=10"
timeout = 60
timeout_func_only = true

[tool.mypy]
strict = true
follow_imports = "silent"
disable_error_code = ["import-untyped", "no-untyped-call"]

[project.entry-points.dask_cluster_discovery]
helmcluster = "dask_kubernetes.helm:discover"
kubecluster = "dask_kubernetes.operator:discover"

[project.entry-points.dask_operator_plugin]
noop = "dask_kubernetes.operator.controller.plugins.noop"

[project.entry-points.dask_cli]
kubernetes = "dask_kubernetes.cli:main"
